# academe

./: .gitignore  Cargo.toml  notes
.cargo/: config
assets/scripts/: test_script.lua
crates/bevy-htn/: Cargo.toml
crates/bevy_htn/: Cargo.toml
crates/bevy_htn/src/: behaviour.rs  context.rs  htn.rs  lib.rs  macros.rs  planner.rs  plugin.rs  task.rs
crates/bevy_htn/src/fluidhtn_tests/: PlannerTests.cs
crates/bevy_htn/tests/: tests.rs
src/: ai.rs  ai_demo.rs  debug.rs  editor.rs  game.rs  input.rs  macros.rs  main.rs  main_cam.rs  nav.rs  scripting.rs  space.rs  ui.rs  utils.rs
src/ai/: actors.rs  behaviour.rs  htn.rs  planner.rs  plugin.rs  task.rs
src/ai/fluidhtn_tests/: DomainTests.cs
src/editor/: plugin.rs
src/game/: area.rs  aspects.rs  commands.rs  entities.rs  objects.rs
src/nav/: graph.rs  nav_agent.rs  navmesh.rs
src/nav/old_code/: navigation.rs  navmesh.rs
src/scripting/: plugin.rs  script.rs  scripting.rs
src/space/: plugin.rs  space.rs
src/ui/: debug.rs  editor_interface.rs  elements.rs  interaction.rs  plugin.rs  setup.rs
src/utils/: data_struct.rs  entities.rs  geometry.rs  math.rs
tests/: ai.rs
