[package]
name = "academe"
version = "0.1.0"
authors = ["King-Coyote <alex.hartstone@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = [] }
bevy_htn = { path = "crates/bevy_htn", version = "^0.1.0"}
bevy_prototype_lyon = "~0.6.0"
pathfinding = "^2.0.0"
spade = "^1.8"
intersect2d = "~0.4.2"
geo = "~0.23"
rand = "~0.8.5"
leafwing-input-manager = "0.5.2"